<resources>
    <string name="app_name">Inventory Tracker</string>

    <!-- appbar labels -->
    <string name="catalog_appbar">Product Catalog</string>
    <string name="detail_appbar">Product Inventory</string>

    <string name="empty_view_text_1">Sorry, there are no products to display.</string>
    <string name="empty_view_text_2">Press the \'&#43;\' icon to add new products.</string>

    <!-- options menu title strings -->
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <!-- catalog activity -->
    <string name="error_deleting_all_products">Error: no products were deleted</string>
    <string name="delete_all_products_successful">All products deleted successfully</string>

    <string name="deleteConf_dialog_msg">Are you sure you want to delete all products?</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>

    <!-- cursor recyclerview adapter -->
    <string name="is_exception_cursor_invalid">onBindView Holder cannot be called on an invalid cursor</string>
    <string name="is_exception_cannot_move_cursor">Cannot move cursor to position</string>

    <!-- listview -->
    <string name="name">Product Name</string>
    <string name="current_quantity">Qty:</string>
    <string name="price">Price:</string>

    <string name="product_sale">Sell This Product</string>

    <!-- edit product activity -->
    <string name="edit_appbar_add_product">Add a New Product</string>
    <string name="edit_appbar_edit_product">Edit Product</string>
    <string name="name_prompt">"What is the product name?"</string>
    <string name="qty_prompt">What is the current quantity of this product?</string>
    <string name="price_prompt">What is the price of this product?"</string>
    <string name="image_prompt">Upload a new image for this product</string>
    <string name="supplier_prompt">Please enter the supplier\'s e-mail address for this product.</string>

    <string name="editor_error_inserting_product">Error inserting product</string>
    <string name="editor_insert_product_successful">New product added successfully</string>

    <string name="error_updating_product">Error updating product</string>
    <string name="product_update_successful">Product updated successfully</string>

    <string name="edit_error_deleting_product">Error deleting product</string>
    <string name="edit_product_deletion_successful">Product deleted successfully</string>

    <string name="user_input_validation_name">Entry not saved...product requires a valid name</string>
    <string name="user_input_validation_qty">Entry not saved...product requires a valid quantity(i.e. >= 0)</string>
    <string name="user_input_validation_price">Entry not saved...product requires a valid price(i.e. >= 0)</string>
    <string name="user_input_validation_supplier_email">Entry not saved...product requires a valid supplier e-mail</string>

    <!-- product detail activity -->
    <string name="product_name">Product Name</string>
    <string name="quantity_heading">Quantity</string>

    <string name="supplier_email_subject">Account 123456 Restock Request</string>
    <string name="email_intent_chooser_title">Send E-mail to Supplier</string>
    
    <string name="email_body_qty_desired">Qty:</string>

    <string name="error_updating_qty">Error updating quantity for this product</string>
    <string name="qty_update_successful">Quantity update for this product was successful</string>

    <string name="detail_error_deleting_product">Error deleting product</string>
    <string name="detail_product_deletion_successful">Product deletion was successful</string>

    <string name="update_quantity">Update Quantity</string>
    <string name="update_qty_shipment">Update Quantity with Shipment Data</string>
    <string name="order_more">Order More</string>

    <string name="product_deleteConf_dialog_msg">Are you sure you want to delete this product?</string>

    <string name="supp_email_dialog_msg">Would you like to order more of this product?</string>
    <string name="supp_email_dialog_yes">Yes</string>
    <string name="supp_email_dialog_no">No</string>

    <string name="invalid_quantity_reset_zero">Invalid value, quantity will be re-set to zero.</string>

    <!-- product provider -->
    <string name="error_inserting_table_row">Error inserting product table row</string>
    <string name="insert_table_row_successful">New product table row added successfully</string>
    <string name="product_name_exception">Product requires a name</string>
    <string name="product_quantity_exception">Product requires a quantity greater than or equal to zero</string>
    <string name="product_price_exception">Product requires a price greater than or equal to zero</string>
    <string name="product_image_uri_exception">Invalid image URI</string>
    <string name="supplier_email_exception">Invalid supplier e-mail</string>

</resources>
