<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProductActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="22sp"
            android:text="@string/name_prompt"/>
        <EditText
            android:id="@+id/edit_name"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/quantity_prompt"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/qty_prompt"/>
        <EditText
            android:id="@+id/edit_quantity"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/price_prompt"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/price_prompt"/>
        <EditText
            android:id="@+id/edit_price"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/supplier_email_prompt"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/supplier_prompt"/>
        <EditText
            android:id="@+id/edit_supplier_email"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp" />

        <Button
            android:id="@+id/image_prompt"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:text="@string/image_prompt"/>
        <ImageView
            android:id="@+id/uploaded_image"
            android:layout_marginLeft="10dp"
            android:layout_width="200dp"
            android:layout_height="200dp"/>
    </LinearLayout>
</ScrollView>