<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fcfaf8">

            <TextView
                android:id="@+id/name"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/current_quantity"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:text="@string/current_quantity"/>
            <TextView
                android:id="@+id/price"
                android:textSize="22sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_quantity"
                android:text="@string/price"/>

            <Button
                android:id="@+id/sale"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"
                android:text="@string/product_sale"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="6dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"

                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

