<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/white"
            tools:text="Product Name"/>

        <TextView
            android:id="@+id/quantity_heading"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/name"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:text="Quantity"
            />

        <RelativeLayout
            android:id="@+id/quantity_block"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_below="@id/quantity_heading">

            <ImageButton
                android:id="@+id/qty_down_arrow"
                android:src="@drawable/ic_arrow_down_drop_circle_outline_white_48dp"
                android:background="@android:color/transparent"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/qty_edit_field"
                android:layout_toRightOf="@id/qty_down_arrow"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="10dp" />
            <ImageButton
                android:id="@+id/qty_up_arrow"
                android:src="@drawable/ic_arrow_up_drop_circle_outline_white_48dp"
                android:background="@android:color/transparent"
                android:layout_toRightOf="@id/qty_edit_field"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/update_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/quantity_block"
            android:background="@android:color/transparent"
            android:layout_marginBottom="2dp"
            android:textColor="@android:color/white"
            android:text="@string/update_quantity"/>

        <Button
            android:id="@+id/update_qty_shipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/update_quantity"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_marginBottom="2dp"
            android:text="@string/update_qty_shipment"/>

        <Button
            android:id="@+id/order_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:layout_below="@id/update_qty_shipment"
            android:text="@string/order_more"/>

        <ImageView
            android:id="@+id/whitespace_img"
            android:src="@drawable/nursery"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="300dp"
            android:layout_below="@id/order_more"
            android:scaleType="fitXY"/>

    </RelativeLayout>


</ScrollView>